--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@ a {
   border-color: inherit;
 }
 
+.gap-10{
+  gap: 10px;
+}
+
+.gap-15{
+  gap: 15px;
+}
+
 /* Header Part */
 .header-top-strip {
   background-color: var(--color-131921);
@@ -32,5 +40,9 @@ a {
 }
 .header-upper .input-group-text {
   background-color: var(--color-febd69);
+}
+.header-upper .header-upper-Links img{
+  width: 35px;
+  height: 35px;
 }
 /* Header Part End Here */
